# CoreOS

./: .gitignore  .gitmodules  CMakeLists.txt
CoreOS/: CoreOS.h
CoreOS/include/: CoreOS_Utils.h  OS.h
CoreOS/src/: OS.cpp
acow/: OS.h
acow/include/: OS.h  Version.h  Windows.h
acow/src/: Windows.cpp
scripts/: dependencies.lua
test/: main.cpp
